Added row completion

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <h6>Tetris game by <a href="https://github.com/vanodium">vanodium</a> 2025</h6>
 
     <div id="gameContainer" class="game-container">
-        <div class="game-ui">
-            <div id="score">0</div>
+        <div class="score-container">
+            <div id="score-text">SCORE:</div>
+            <div id="score-value">0</div>
         </div>
         <div id="gameCanvas"></div>
     </div>
 
 </body>
-</html> 
+</html>
